--- a/second.html
+++ b/second.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <header>
-            nywele
+            hair
         </header>
-        mwili
+        the rest boy
         <section>
             sehemu
         </section>
